[package]
name = "mpeg2ts_learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
env_logger = "0.9.0"
hex-slice = "0.1.4"
log = "0.4.17"
mpeg2ts-reader = "0.15.0"
structopt = "0.3.26"

[dev-dependencies]
chrono = "0.4.22"
