[package]
name = "klv"
version = "0.2.0"
edition = "2021"
description = "parser for klv metadata"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = {version = "1.4.3"}

[dev-dependencies]
chrono = "0.4.22"
criterion = "0.4.0"

[features]
default = ["value"]
uasdls = ["value"]
value = []
testserde = []

[[bench]]
name = "benchmark"
harness = false
