[package]
name = "klv"
version = "0.3.0"
edition = "2021"
description = "parser for klv metadata"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = {version = "1.4.3"}
serde = { version = "1.0.149" }

[dev-dependencies]
serde = { version = "1.0.149", features = ["derive"] }
chrono = "0.4.22"
criterion = "0.4.0"
serde_bytes = "0.11.7"

[features]
default = []
uasdls = []

[[bench]]
name = "benchmark"
harness = false
