[package]
name = "mpegts_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
mpeg2ts-reader = "0.15.0"
structopt = "0.3.26"
hex-slice = "0.1.4"
klv = {package="klv", path = "../klv", features=["uasdms"]}
